# ZandroX

./: .clang-tidy  .dockerignore  .gitignore  .gitlab-ci.yml  .hgignore  AGENTS.md  Dockerfile  Dockerfile.linux-build  README.md  THIRD-PARTY-NOTICES.txt  build.sh  default.profraw  linux_compile.sh  mac_build.sh  mac_compile.sh  package-linux.sh  tests.json  windows_build.ps1  windows_compile.ps1
.claude/skills/fixed64-widening/: SKILL.md
.claude/skills/fixed64-widening/references/: prior-art.md
.claude/skills/provenance-links/: SKILL.md
.claude/skills/upstream-port/: SKILL.md
.claude/skills/writing-tests/: SKILL.md
.claude/skills/zandronum-driver/: SKILL.md
.github/: pull_request_template.md
.github/workflows/: _build.yml  _test.yml  badges.yml  ci-windows.yml  ci.yml  manual-build-latest.yml  release.yml  test-and-build.yml  windows-export-deps.yml  windows-fast-build.yml
docs/: base-engine-backport-scope.md  borderless-feasibility.md  fixed64-migration-scope.md  hwrender-PLAN.md  hwrender-branch-status.md  hwrender-integration-plan.md  hwrender-portability-scope.md  renderer-staircase.md  zscript-deep-checks.md  zscript-feasibility.md  zscript-insulation.md
features/: README.md
features/freeform-menu/: freeformmenu.cpp  freeformmenuitems.h
progress/: README.md
progress/renderer-staircase/: README.md  ledger.tsv
progress/renderer-staircase/testmaps/: README.md  lighttest_gen.py
scripts/: zx-mcp-reset.sh
sqlite/: CMakeLists.txt
src/: CMakeLists.txt  gameconfigfile.cpp  p_acs.cpp  p_interaction.cpp  p_mobj.cpp  p_things.cpp  v_font.cpp  v_text.cpp  v_video.cpp  voicechat.h
src/asm_ia32/: tmap.asm
src/gl/scene/: gl_scene.cpp
src/gl/system/: gl_framebuffer.cpp  gl_interface.cpp
src/sdl/: i_main.cpp
src/sound/: fmodsound.cpp  i_music.cpp  i_sound.cpp
src/zandronum/: .hgtags  CMakeLists.txt
src/zandronum/.github/workflows/: ci-linux.yml
src/zandronum/ZVulkan/: CMakeLists.txt  UPSTREAM.md
src/zandronum/docs/licenses/: README.TXT
src/zandronum/gdtoa/: CMakeLists.txt  gdtoa.h
src/zandronum/output_sdl/: CMakeLists.txt
src/zandronum/protocolspec/generator/: parametertypes.py
src/zandronum/rendering/: UPSTREAM.md  i_modelvertexbuffer.h  i_video.h  r_thread.cpp  r_thread.h  r_videoscale.cpp  r_videoscale.h  stb_include.cpp  v_framebuffer.cpp  v_video.cpp  v_video.h
src/zandronum/rendering/gl/: gl_buffers.cpp  gl_buffers.h  gl_debug.cpp  gl_debug.h  gl_framebuffer.cpp  gl_framebuffer.h  gl_hwtexture.cpp  gl_hwtexture.h  gl_postprocess.cpp  gl_postprocessstate.cpp  gl_postprocessstate.h  gl_renderbuffers.cpp  gl_renderbuffers.h  gl_renderer.cpp  gl_renderer.h  gl_renderstate.cpp  gl_renderstate.h  gl_samplers.cpp  gl_samplers.h  gl_shader.cpp  gl_shader.h  gl_shaderprogram.cpp  gl_shaderprogram.h  gl_stereo3d.cpp
src/zandronum/rendering/gl_load/: gl_interface.cpp  gl_interface.h  gl_load.h  gl_system.h
src/zandronum/rendering/gles/: gles_buffers.cpp  gles_buffers.h  gles_framebuffer.cpp  gles_framebuffer.h  gles_hwtexture.cpp  gles_hwtexture.h  gles_postprocess.cpp  gles_postprocessstate.cpp  gles_postprocessstate.h  gles_renderbuffers.cpp  gles_renderbuffers.h  gles_renderer.cpp  gles_renderer.h  gles_renderstate.cpp  gles_renderstate.h  gles_samplers.cpp  gles_samplers.h  gles_shader.cpp  gles_shader.h  gles_shaderprogram.cpp  gles_shaderprogram.h  gles_system.cpp  gles_system.h
src/zandronum/rendering/hwrenderer/: hw_draw2d.cpp
src/zandronum/src/: CMakeLists.txt  actor.h  am_map.cpp  am_map.h  astar.cpp  basictypes.h  botcommands.cpp  botpath.cpp  bots.cpp  c_console.cpp  cl_commands.cpp  cl_demo.cpp  cl_main.cpp  compatibility.cpp  d_dehacked.cpp  d_event.h  d_main.cpp  d_main.h  d_net.cpp  d_net.h  d_player.h  d_ticcmd.h  decallib.cpp  doomdata.h  doomdef.cpp  doomdef.h  doomstat.cpp  doomstat.h  doomtype.h  dsectoreffect.cpp  f_wipe.cpp  f_wipe.h  farchive.h  files.h  g_game.cpp  g_game.h  g_level.cpp  g_skill.cpp  gi.cpp  gi.h  (+98 more)
src/zandronum/src/computation/: fixedmath.h  fixedmath_test.cpp  rail_puff_compute.cpp  rail_puff_compute.h  rail_puff_compute_test.cpp  voicechat_convert_compute.cpp  voicechat_convert_compute.h  voicechat_convert_compute_test.cpp
src/zandronum/src/features/: README.md
src/zandronum/src/g_doom/: a_archvile.cpp  a_bossbrain.cpp  (+7 more)
src/zandronum/wadsrc_bm/: CMakeLists.txt
src/zandronum/wadsrc_st/: CMakeLists.txt
tests/: CMakeLists.txt  coverage.sh  optout-fixed-check.sh  strict-check.sh  vectors_test.cpp
tools/: ab_render.py  apply-upstream-diff.sh  backport-scout.sh  compare_shots.py  ff-parity-tripwire.sh  make-iconset.py  removed-api-tripwire.sh  staircase-ledger-check.sh  staircase-ledger-gen.sh  zscript-rosetta-gen.sh  zscript-tripwire.sh
tools/data/: zscript-rosetta.tsv
tools/mcp-bridge/: apply-bridge.core.mjs  apply-bridge.mjs
tools/mcp-bridge/overlay/: mcp_acsvars.inc  mcp_actorstate.cpp  mcp_bridge.cpp  mcp_bridge.h  mcp_crash.cpp  mcp_event.cpp  mcp_hud.cpp  mcp_hud.h  mcp_mapvars.inc  mcp_renderinfo.cpp  mcp_scripts.inc
wadsrc/static/: animdefs.txt  language.enu  menudef.txt  textcolors.za
wadsrc/static/actors/: actor.txt
windows_assets/: README.md
windows_assets/include/: libyasm-stdint.h
windows_assets/include/FLAC/: export.h
windows_assets/include/FLAC++/: export.h
windows_assets/lib/: FLAC++.lib  FLAC.lib  OpenAL32.lib  fmt-c.lib  fmt.lib  libcrypto.lib  libmp3lame.lib  libssl.lib  mpg123.lib  ogg.lib  opus.lib  out123.lib  pkgconf.lib  sndfile.lib  syn123.lib  vorbis.lib  vorbisenc.lib  vorbisfile.lib  yasm.lib
windows_assets/lib/pkgconfig/: flac++.pc  flac.pc  fmt.pc  libmpg123.pc  libout123.pc  libpkgconf.pc  libsyn123.pc  ogg.pc  openal.pc  opus.pc  sndfile.pc  vorbis.pc  vorbisenc.pc  vorbisfile.pc
windows_assets/licenses/: openal-soft.txt
(+480 files in other folders)
